<resources>
    <string name="app_name">Linux Deploy</string>
    <string name="app_version">version %1$s</string>
    <string name="menu_start">START</string>
    <string name="menu_stop">STOP</string>
    <string name="menu_properties">Properties</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_terminal">Terminal</string>
    <string name="menu_status">Status</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_new">New</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_discard">Delete</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_markall">Mark all</string>
    <string name="menu_clearall">Clear all</string>
    <string name="notification_current_profile">Current profile</string>
    <string name="title_activity_main">Linux Deploy</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_properties">Properties</string>
    <string name="title_activity_profiles">Profiles</string>
    <string name="title_activity_scripts">Scripts</string>
    <string name="title_activity_mounts">Mounts</string>
    <string name="confirm_start_title">Start</string>
    <string name="confirm_stop_title">Stop</string>
    <string name="confirm_start_message">Mount the container and start services?</string>
    <string name="confirm_stop_message">Stop services and unmount the container?</string>
    <string name="new_profile_title">Profile name</string>
    <string name="edit_profile_title">Profile name</string>
    <string name="import_profile_title">Import profile</string>
    <string name="export_profile_title">Export profile</string>
    <string name="toast_import_profile_success">Profile has been successfully imported.</string>
    <string name="toast_import_profile_error">Error importing profile!</string>
    <string name="toast_export_profile_success">Profile has been successfully exported.</string>
    <string name="toast_export_profile_error">Error exporting profile!</string>
    <string name="toast_terminal_error">Error when starting the terminal!</string>
    <string name="confirm_profile_discard_title">Remove profile</string>
    <string name="confirm_profile_discard_message">Remove selected profile?</string>
    <string name="new_script_title">Script path</string>
    <string name="edit_script_title">Script path</string>
    <string name="confirm_script_discard_title">Remove script</string>
    <string name="confirm_script_discard_message">Remove selected script from the list?</string>
    <string name="new_mount_title">Mount point</string>
    <string name="edit_mount_title">Mount point</string>
    <string name="confirm_mount_discard_title">Remove point</string>
    <string name="confirm_mount_discard_message">Remove selected mount point from the list?</string>
    <string name="app_preferences">Application</string>
    <string name="title_screenlock_preference">Lock screen</string>
    <string name="summary_screenlock_preference">Keep screen active while the application is running</string>
    <string name="title_wifilock_preference">Lock Wi-Fi</string>
    <string name="summary_wifilock_preference">Keep Wi-Fi active while the application is running</string>
    <string name="title_language_preference">Language</string>
    <string name="dialog_title_language_preference">Choose language</string>
    <string name="title_fontsize_preference">Font size</string>
    <string name="dialog_title_fontsize_preference">Font size</string>
    <string name="title_maxlines_preference">Scroll size</string>
    <string name="dialog_title_maxlines_preference">Scroll size</string>
    <string name="title_theme_preference">Theme</string>
    <string name="dialog_title_theme_preference">Choose theme</string>
    <string name="title_timestamp_preference">Timestamp</string>
    <string name="summary_timestamp_preference">Show timestamp</string>
    <string name="title_appicon_preference">Show icon</string>
    <string name="summary_appicon_preference">Display icon in notification bar</string>
    <string name="title_autostart_preference">Autostart</string>
    <string name="summary_autostart_preference">Automatically run the container when starting Android</string>
    <string name="title_terminalcmd_preference">Terminal command</string>
    <string name="dialog_title_terminalcmd_preference">Terminal command</string>
    <string name="env_preferences">Operating environment</string>
    <string name="title_busyboxdir_preference">BusyBox directory</string>
    <string name="dialog_title_busyboxdir_preference">BusyBox directory</string>
    <string name="title_usecli_preference">Enable CLI</string>
    <string name="summary_usecli_preference">Set up a command line interface</string>
    <string name="title_installenv_preference">Update ENV</string>
    <string name="summary_installenv_preference">Update the operating environment</string>
    <string name="message_installenv_confirm_dialog">Update the operating environment?</string>
    <string name="title_removeenv_preference">Remove ENV</string>
    <string name="summary_removeenv_preference">Remove the operating environment</string>
    <string name="message_removeenv_confirm_dialog">Remove the operating environment?</string>
    <string name="debug_preferences">Debug</string>
    <string name="title_debug_preference">Debug mode</string>
    <string name="summary_debug_preference">Show debugging information</string>
    <string name="title_trace_preference">Trace mode</string>
    <string name="summary_trace_preference">Enable tracing mode</string>
    <string name="title_logger_preference">Logging</string>
    <string name="summary_logger_preference">Save logs to a file</string>
    <string name="title_logfile_preference">Log file</string>
    <string name="dialog_title_logfile_preference">Log file</string>
    <string name="action_preferences">Action</string>
    <string name="title_install_preference">Install</string>
    <string name="summary_install_preference">Start GNU/Linux installation</string>
    <string name="message_install_confirm_dialog">Start installation of GNU/Linux system?</string>
    <string name="title_reconfigure_preference">Reconfigure</string>
    <string name="summary_reconfigure_preference">Start GNU/Linux reconfiguration</string>
    <string name="message_reconfigure_confirm_dialog">Start reconfiguration of GNU/Linux system?</string>
    <string name="title_export_preference">Export</string>
    <string name="summary_export_preference">Export the container as rootfs archive</string>
    <string name="deploy_preferences">Deploy</string>
    <string name="title_distribution_preference">Distribution</string>
    <string name="dialog_title_distribution_preference">Distribution</string>
    <string name="title_suite_preference">Distribution suite</string>
    <string name="dialog_title_suite_preference">Distribution suite</string>
    <string name="title_mirror_preference">Mirror URL</string>
    <string name="dialog_title_mirror_preference">Mirror URL</string>
    <string name="title_architecture_preference">Architecture</string>
    <string name="dialog_title_architecture_preference">Architecture</string>
    <string name="title_deploytype_preference">Installation type</string>
    <string name="dialog_title_deploytype_preference">Installation type</string>
    <string name="title_diskimage_preference">Installation path</string>
    <string name="dialog_title_diskimage_preference">Installation path</string>
    <string name="title_disksize_preference">Image size (MB)</string>
    <string name="dialog_title_disksize_preference">Disk image size (MB)</string>
    <string name="summary_disksize_preference">Automatic calculation</string>
    <string name="title_fstype_preference">File system</string>
    <string name="dialog_title_fstype_preference">File system</string>
    <string name="title_username_preference">User name</string>
    <string name="dialog_title_username_preference">User name</string>
    <string name="title_password_preference">User password</string>
    <string name="dialog_title_password_preference">User password</string>
    <string name="title_serverdns_preference">DNS server</string>
    <string name="dialog_title_serverdns_preference">Address of DNS server</string>
    <string name="summary_serverdns_preference">Automatic detection</string>
    <string name="title_locale_preference">Localization</string>
    <string name="dialog_title_locale_preference">Localization</string>
    <string name="title_desktopenv_preference">Desktop environment</string>
    <string name="dialog_title_desktopenv_preference">Desktop environment</string>
    <string name="dialog_title_components_preference">Components</string>
    <string name="summary_components_preference">Select components to install</string>
    <string name="title_components_preference">Select components</string>
    <string name="startup_preferences">Startup</string>
    <string name="title_mountdir_preference">Chroot directory</string>
    <string name="dialog_title_mountdir_preference">Chroot directory</string>
    <string name="title_sshstartup_preference">SSH</string>
    <string name="summary_sshstartup_preference">Allow startup of SSH server</string>
    <string name="title_sshproperties_preference">SSH settings</string>
    <string name="summary_sshproperties_preference">Change settings for SSH server</string>
    <string name="title_guistartup_preference">GUI</string>
    <string name="summary_guistartup_preference">Allow startup a graphical environment</string>
    <string name="title_guitype_preference">Graphics subsystem</string>
    <string name="dialog_title_guitype_preference">Graphics subsystem</string>
    <string name="title_guiproperties_preference">GUI settings</string>
    <string name="summary_guiproperties_preference">Change settings for the graphics subsystem</string>
    <string name="title_customstartup_preference">Custom scripts</string>
    <string name="summary_customstartup_preference">Enable custom scripts execution</string>
    <string name="title_scriptseditor_preference">List of scripts</string>
    <string name="summary_scriptseditor_preference">Edit custom scripts list</string>
    <string name="title_custommount_preference">Custom mounts</string>
    <string name="summary_custommount_preference">Allow to mount the Android resources</string>
    <string name="title_mountseditor_preference">Mount points</string>
    <string name="summary_mountseditor_preference">Edit the mount points list</string>
    <string name="ssh_preferences">SSH</string>
    <string name="title_sshport_preference">Port</string>
    <string name="dialog_title_sshport_preference">SSH: port</string>
    <string name="vnc_preferences">VNC</string>
    <string name="title_vncdisplay_preference">Display</string>
    <string name="dialog_title_vncdisplay_preference">VNC: display number</string>
    <string name="title_vncdepth_preference">Depth (bits)</string>
    <string name="dialog_title_vncdepth_preference">VNC: depth (bits)</string>
    <string name="title_vncdpi_preference">DPI</string>
    <string name="dialog_title_vncdpi_preference">VNC: dots per inch (DPI)</string>
    <string name="title_vncwidth_preference">Width</string>
    <string name="dialog_title_vncwidth_preference">VNC: screen width</string>
    <string name="xserver_preferences">X Server</string>
    <string name="title_xdisplay_preference">Display</string>
    <string name="dialog_title_xdisplay_preference">X: display number</string>
    <string name="title_xhost_preference">X server address</string>
    <string name="dialog_title_xhost_preference">X: IP or host name</string>
</resources>