<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/app_preferences" >
        <CheckBoxPreference
            android:defaultValue="@string/screenlock"
            android:key="screenlock"
            android:summary="@string/summary_screenlock_preference"
            android:title="@string/title_screenlock_preference" />
        <CheckBoxPreference
            android:defaultValue="@string/wifilock"
            android:key="wifilock"
            android:summary="@string/summary_wifilock_preference"
            android:title="@string/title_wifilock_preference" />

        <ListPreference
            android:defaultValue="@string/language"
            android:dialogTitle="@string/dialog_title_language_preference"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:key="language"
            android:summary="@string/language"
            android:title="@string/title_language_preference" />

        <EditTextPreference
            android:defaultValue="@string/fontsize"
            android:dialogTitle="@string/dialog_title_fontsize_preference"
            android:inputType="numberDecimal"
            android:key="fontsize"
            android:summary="@string/fontsize"
            android:title="@string/title_fontsize_preference" />
        
        <EditTextPreference
            android:defaultValue="@string/maxlines"
            android:dialogTitle="@string/dialog_title_maxlines_preference"
            android:inputType="numberDecimal"
            android:key="maxlines"
            android:summary="@string/maxlines"
            android:title="@string/title_maxlines_preference" />

        <ListPreference
            android:defaultValue="@string/theme"
            android:dialogTitle="@string/dialog_title_theme_preference"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:summary="@string/theme"
            android:title="@string/title_theme_preference" />

        <CheckBoxPreference
            android:defaultValue="@string/timestamp"
            android:key="timestamp"
            android:summary="@string/summary_timestamp_preference"
            android:title="@string/title_timestamp_preference" />
        <CheckBoxPreference
            android:defaultValue="@string/appicon"
            android:key="appicon"
            android:summary="@string/summary_appicon_preference"
            android:title="@string/title_appicon_preference" />
        <CheckBoxPreference
            android:defaultValue="@string/autostart"
            android:key="autostart"
            android:summary="@string/summary_autostart_preference"
            android:title="@string/title_autostart_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/env_preferences" >
        <EditTextPreference
            android:defaultValue="@string/busyboxdir"
            android:dialogTitle="@string/dialog_title_busyboxdir_preference"
            android:key="busyboxdir"
            android:summary="@string/busyboxdir"
            android:title="@string/title_busyboxdir_preference" />

        <CheckBoxPreference
            android:defaultValue="@string/usecli"
            android:key="usecli"
            android:summary="@string/summary_usecli_preference"
            android:title="@string/title_usecli_preference" />

        <PreferenceScreen
            android:key="installenv"
            android:summary="@string/summary_installenv_preference"
            android:title="@string/title_installenv_preference" />
        <PreferenceScreen
            android:key="removeenv"
            android:summary="@string/summary_removeenv_preference"
            android:title="@string/title_removeenv_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/debug_preferences" >
        <CheckBoxPreference
            android:defaultValue="@string/debug"
            android:key="debug"
            android:summary="@string/summary_debug_preference"
            android:title="@string/title_debug_preference" />
        <CheckBoxPreference
            android:defaultValue="@string/trace"
            android:dependency="debug"
            android:key="trace"
            android:summary="@string/summary_trace_preference"
            android:title="@string/title_trace_preference" />
        <CheckBoxPreference
            android:defaultValue="@string/logger"
            android:key="logger"
            android:summary="@string/summary_logger_preference"
            android:title="@string/title_logger_preference" />

        <EditTextPreference
            android:defaultValue="@string/logfile"
            android:dependency="logger"
            android:dialogTitle="@string/dialog_title_logfile_preference"
            android:key="logfile"
            android:summary="@string/logfile"
            android:title="@string/title_logfile_preference" />
    </PreferenceCategory>

</PreferenceScreen>