<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_profiles"
        android:icon="@drawable/ic_action_profiles_dark"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_profiles">
    </item>
    <item
        android:id="@+id/menu_start"
        android:icon="@drawable/ic_action_start_dark"
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:title="@string/menu_start">
    </item>
    <item
        android:id="@+id/menu_stop"
        android:icon="@drawable/ic_action_stop_dark"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_stop">
    </item>
    <item
        android:id="@+id/menu_properties"
        android:icon="@drawable/ic_action_properties_dark"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_properties">
    </item>
    <item
        android:id="@+id/menu_clear"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_clear">
    </item>
    <item
        android:id="@+id/menu_status"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_status">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings">
    </item>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about">
    </item>
    <item
        android:id="@+id/menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_exit">
    </item>

</menu>